# backend/docs/swagger.json
@@ -178,6 +178,32 @@
                 }
             }
         },
+        "/accounts/templates": {
+            "get": {
+                "description": "アカウントテンプレートの一覧取得",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "accounts"
+                ],
+                "summary": "アカウントテンプレート一覧",
+                "responses": {
+                    "200": {
+                        "description": "成功",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/handlers.AccountTemplateResponse"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/alive-checks": {
             "get": {
                 "description": "アライブチェック履歴一覧を取得する",
@@ -1094,9 +1120,6 @@
         "handlers.AccountCreateRequest": {
             "type": "object",
             "properties": {
-                "accountUsername": {
-                    "type": "string"
-                },
                 "appDescription": {
                     "type": "string"
                 },
@@ -1112,7 +1135,8 @@
                 "customData": {
                     "type": "array",
                     "items": {
-                        "type": "integer"
+                        "type": "object",
+                        "additionalProperties": true
                     }
                 },
                 "email": {
@@ -1132,15 +1156,15 @@
                 },
                 "plsDelete": {
                     "type": "boolean"
+                },
+                "username": {
+                    "type": "string"
                 }
             }
         },
         "handlers.AccountResponse": {
             "type": "object",
             "properties": {
-                "accountUsername": {
-                    "type": "string"
-                },
                 "appDescription": {
                     "type": "string"
                 },
@@ -1154,19 +1178,15 @@
                     "type": "integer"
                 },
                 "customData": {
-                    "type": "array",
-                    "items": {
-                        "type": "integer"
-                    }
+                    "type": "object",
+                    "additionalProperties": true
                 },
                 "email": {
                     "type": "string"
                 },
                 "encPassword": {
-                    "type": "array",
-                    "items": {
-                        "type": "integer"
-                    }
+                    "type": "string",
+                    "format": "binary"
                 },
                 "id": {
                     "type": "integer"
@@ -1187,6 +1207,26 @@
                     "type": "boolean"
                 },
                 "trustID": {
+                    "type": "integer"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "handlers.AccountTemplateResponse": {
+            "type": "object",
+            "properties": {
+                "appDescription": {
+                    "type": "string"
+                },
+                "appIconUrl": {
+                    "type": "string"
+                },
+                "appName": {
+                    "type": "string"
+                },
+                "id": {
                     "type": "integer"
                 }
             }
